tests/ui/macros/no-matching-rule.rs
//@ edition: 2015
fn main() {
    panic!(@); //~ ERROR no rules expected `@`
}
